# purekit

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  version.py
.github/workflows/: ci.yml  release.yml
src/purekit/: __init__.py  core.py  enums.py  exceptions.py  fn.py  mixin.py  sets.py  text.py
tests/: smoke_test.py  test_core.py  test_enums.py  test_exceptions.py  test_fn.py  test_meta.py  test_mixin.py  test_num.py  test_seq.py  test_sets.py  test_text.py
